feat: migrate view-controller-app

--- a/migration-newip-to-ts/.eslintrc.json
+++ b/migration-newip-to-ts/.eslintrc.json
@@ -21,7 +21,8 @@
     "node": true
     },
   "rules": {
-    "no-console": 0,
-    "class-methods-use-this": "off"
-  }
+    "@typescript-eslint/no-var-requires": 0,
+    "no-unreachable": 1,
+    "consistent-return": 1
+    }
 }
