--- a/migration-newip-to-ts/tsconfig.json
+++ b/migration-newip-to-ts/tsconfig.json
@@ -4,31 +4,13 @@
     "module": "es6",
     "target": "es6",
     "sourceMap": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    // Strict Checks
-    "alwaysStrict": true,
+    "skipLibCheck": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
-    "strictBindCallApply": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    // Linter Checks
-    "noImplicitReturns": true, // https://eslint.org/docs/rules/consistent-return ?
-    "noFallthroughCasesInSwitch": true, // https://eslint.org/docs/rules/no-fallthrough
-    "noUnusedLocals": true, // https://eslint.org/docs/rules/no-unused-vars
-    "noUnusedParameters": true, // https://eslint.org/docs/rules/no-unused-vars#args
-    "allowUnreachableCode": false, // https://eslint.org/docs/rules/no-unreachable ?
-    "allowUnusedLabels": false, // https://eslint.org/docs/rules/no-unused-labels
-    // Base Strict Checks
-    "noImplicitUseStrict": false,
-    "suppressExcessPropertyErrors": false,
-    "suppressImplicitAnyIndexErrors": false,
-    "noStrictGenericChecks": false,
   },
   "include": ["./src"],
-  "exclude": ["./node_modules", "./dist"],
 }
