fix: fix eslint errors

--- a/migration-newip-to-ts/.eslintrc.json
+++ b/migration-newip-to-ts/.eslintrc.json
@@ -22,6 +22,7 @@
     },
   "rules": {
     "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-non-null-assertion": 0,
     "no-unreachable": 1,
     "consistent-return": 1
     }
