--- a/art-quiz/.prettierrc
+++ b/art-quiz/.prettierrc
@@ -5,5 +5,6 @@
   "semi": true,
   "singleQuote": true,
   "arrowParens": "avoid",
-  "useTabs": false
+  "useTabs": false,
+  "trailingComma": "none"
 }
