--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -5,17 +5,25 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --hot",
-    "build": "webpack --mode=production"
+    "build": "cross-env NODE_ENV=production webpack --mode=production",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "prettier:format": "prettier src/ --write"
   },
   "author": "Ivan Kuricyn",
   "license": "ISC",
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.6",
+    "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
